# matplotlib-pyo3

./: Cargo.toml
examples/: bar.rs  heatmap.rs
src/: lib.rs  pyplot.rs
