[package]
name = "matplotlib-pyo3"
version = "0.1.4"
authors = [
    "Elias Kuthe <elias.kuthe@tu-dortmund.de>",
    "Till Hartmann <till.hartmann@udo.edu>"
]
edition = "2021"

[dependencies]
numpy = "0.16"
ndarray = "0.15"
anyhow = "1.0"

[dependencies.pyo3]
version = "0.16"
default-features = false
features = ["auto-initialize"]
